--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "invalid_url" = "Некорректный формат ссылки";
 "images_limit" = "Вы можете прикрепить не более 3-х изображений";
 "minimum_choices" = "Необходимо минимум 2 варианта";
+"minimum_limits" = "Минимальное количество участников - 10";
 
 //Common
 "ok" = "Хорошо";
@@ -173,6 +174,7 @@
 "new_poll" = "Новый опрос";
 "topic" = "Раздел";
 "options" = "Опции";
+"accessibility" = "Доступность";
 "poll_title" = "Название";
 "poll_description" = "Детали";
 "poll_question" = "Вопрос";
@@ -193,6 +195,7 @@
 "private_option" = "Частный";
 "private_description" = "Частный опрос, доступ предоставляется по ссылке";
 "ask_question" = "Сформулируйте вопрос";
+"description_explanation" = "Дополнительная информация к опросу, опционально";
 
 "url_placeholder" = "Вставьте ссылку";
 "choose_image" = "Выберите изображение";
@@ -207,6 +210,9 @@
 "are_off" = "Выключены";
 "is_on" = "Включен";
 "is_off" = "Выключен";
+"images_explanation" = "Прикрепите изображения для большей информативности, опционально";
+"url_explanation" = "Прикрепите веб ссылку, опционально";
+
 
 "hot_is_on_description" = "Опрос гарантированно попадет в список Горячих, будут списаны дополнительные баллы";
 "hot_is_off_description" = "Опрос может попасть в список Горячих, если его рейтинг будет выше 4 звезд";
@@ -217,3 +223,4 @@
 "limits_description" = "Количество участников опроса, при достижении которого опрос завершается";
 "comments_on_description" = "Проголосовавшие пользователи могут оставлять комментарии";
 "comments_off_description" = "Комментарии закрыты";
+"cost" = "Стоимость";
