--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -20,6 +20,7 @@
 "images_limit" = "Вы можете прикрепить не более 3-х изображений";
 "minimum_choices" = "Необходимо минимум 2 варианта";
 "minimum_limits" = "Минимальное количество участников - 10";
+"insufficient_balance" = "У Вас недостаточно баллов для публикации";
 
 //Common
 "ok" = "Хорошо";
@@ -185,6 +186,7 @@
 "voters_limit" = "Лимит";
 "voters_limit_description" = "Лимит участников";
 "hot_option" = "Горячий старт";
+"voters_option" = "Количество участников";
 
 "choose_topic" = "Выберите раздел";
 "choose_option" = "Выберите опцию";
@@ -224,3 +226,4 @@
 "comments_on_description" = "Проголосовавшие пользователи могут оставлять комментарии";
 "comments_off_description" = "Комментарии закрыты";
 "cost" = "Стоимость";
+"total_bill" = "Итого:";
