--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -229,3 +229,17 @@
 "cost" = "Стоимость";
 "total_bill" = "Итого:";
 "poll_launched" = "Опрос стартовал";
+"poll_standart_question_button" = "Стандартный вопрос";
+"poll_standart_question" = "Выберите наиболее подходящий Вам вариант ответа";
+
+"choices_tip" = "Предложите не менее 2 вариантов ответов для участников";
+"description_tip" = "Добавьте развернутое описание для раскрытия проблематики вопроса";
+"url_tip" = "Добавьте ссылку на веб ресурс\n(опционально)";
+"images_tip" = "Прикрепите изображения из фотоальбома/камеры, или  просто скопируйте изображение и вернитесь в приложение";
+"limits_tip" = "1 участник = 1 балл Вашего баланса";
+"question_tip" = "Сформулируйте вопрос участникам";
+"hot_tip" = "Старт в топ Горячих для быстрого набора голосов за дополнительные баллы";
+"change_parameters" = "Измените параметры опроса";
+"paste_url" = "Вставить ссылку";
+"add_image" = "Добавить изображение";
+"hot_restricted" = "Приватные опросы не могут попадать в топ Горячих";
