--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -23,6 +23,8 @@
 "insufficient_balance" = "У Вас недостаточно баллов для публикации";
 
 //Common
+"title" = "Титул";
+"caption" = "Подпись";
 "ok" = "Хорошо";
 "more" = "еще";
 "results" = "Результат";
