--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -65,6 +65,8 @@
 "progress" = "Progress";
 "people_voted" = "persons";
 "delete" = "Delete";
+"hide_details" = "Hide details";
+"show_details" = "Show details";
 
 
 //Welcome VC
