--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -40,6 +40,7 @@
 "paste_link" = "Вставьте ссылку";
 "continueButton" = "Продолжить";
 "save" = "Сохранить";
+"save_image" = "Сохранить изображение";
 "camera" = "Камера";
 "photo_album" = "Альбом";
 "api_unavailable" = "Сервер временно недоступен, попробуйте позже";
@@ -67,6 +68,8 @@
 "delete" = "Удалить";
 "hide_details" = "Cкрыть подробности";
 "show_details" = "Показать подробности";
+"hide_images" = "Cкрыть изображения";
+"show_images" = "Показать изображения";
 
 
 //Welcome VC
