--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -47,7 +47,8 @@
 "retry" = "Повторить";
 "more_info" = "Подробнee";
 "play_youtube" = "Воспроизвести здесь";
-"open_youtube" = "Открыть в приложении Youtube";
+"open_youtube" = "Открыть в приложении YouTube";
+"open_tiktok" = "Открыть в приложении TikTok";
 "remember" = "Запомнить";
 "bad_url" = "Нерабочая ссылка";
 "claim_sent" = "Жалоба отправлена";
@@ -70,7 +71,8 @@
 "show_details" = "Показать подробности";
 "hide_images" = "Cкрыть изображения";
 "show_images" = "Показать изображения";
-
+"hide_webview" = "Cкрыть веб ссылку";
+"show_webview" = "Показать веб ссылку";
 
 //Welcome VC
 "welcomeLabel" = "Добро пожаловать в ThinkWhat!";
@@ -229,6 +231,7 @@
 "post_poll" = "Опубликовать";
 "optional" = "Опционально";
 "open_safari" = "Открыть браузер";
+"open_in_safari" = "Открыть в браузере";
 "open_hyperlink" = "Открыть ссылку";
 "limits_description" = "Количество участников опроса, при достижении которого опрос завершается";
 "comments_on_description" = "Проголосовавшие пользователи могут оставлять комментарии";
@@ -250,3 +253,5 @@
 "paste_url" = "Вставить ссылку";
 "add_image" = "Добавить изображение";
 "hot_restricted" = "Приватные опросы не могут попадать в топ Горячих";
+
+//PollView
