--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -255,3 +255,6 @@
 "hot_restricted" = "Приватные опросы не могут попадать в топ Горячих";
 
 //PollView
+"details" = "Подробности";
+"media" = "Медиа";
+"web_link" = "Веб ссылка";
