--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -255,3 +255,6 @@
 "hot_restricted" = "Private polls cannot be get into the Hot";
 
 //PollView
+"details" = "Details";
+"media" = "Media";
+"web_link" = "Web link";
