--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -258,3 +258,5 @@
 "details" = "Подробности";
 "media" = "Медиа";
 "web_link" = "Веб ссылка";
+"vote_verb" = "Проголосуйте";
+"vote_noun" = "Голосование";
