--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -264,3 +264,4 @@
 "make_claim" = "Claim";
 "share" = "Share";
 "watch" = "Watch";
+"vote_to_view_comments" = "To see comments and comment first vote";
