subscriptions collection in progress

--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -264,4 +264,6 @@
 "make_claim" = "Пожаловаться";
 "share" = "Поделиться";
 "watch" = "Отслеживать";
+"don't_watch" = "Не отслеживать";
 "vote_to_view_comments" = "Чтобы увидеть комментарии и комментрировать необходимо сначала проголосовать";
+"added_to_watch_list" = "Результаты опроса отслеживается";
