--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -264,4 +264,6 @@
 "make_claim" = "Claim";
 "share" = "Share";
 "watch" = "Watch";
+"don't_watch" = "Don't watch";
 "vote_to_view_comments" = "To see comments and comment first vote";
+"added_to_watch_list" = "Poll was added to watch list";
