--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -267,3 +267,5 @@
 "don't_watch" = "Не отслеживать";
 "vote_to_view_comments" = "Чтобы увидеть комментарии и комментрировать необходимо сначала проголосовать";
 "added_to_watch_list" = "Результаты опроса отслеживается";
+"votes_total" = "Голосов";
+"voters" = "Проголосовашие";
