--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -269,3 +269,7 @@
 "added_to_watch_list" = "Результаты опроса отслеживается";
 "votes_total" = "Голосов";
 "voters" = "Проголосовашие";
+
+//Tutorials
+"poll_vote_edu_1" = "Опрос завершится и исчезнет из списков после того, как наберется необходимое количество участников.";
+"poll_vote_edu_2" =  "Добавьте в список отслеживаемых, чтобы узнать результат голосования";
