--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -21,6 +21,9 @@
 "minimum_choices" = "Необходимо минимум 2 варианта";
 "minimum_limits" = "Минимальное количество участников - 10";
 "insufficient_balance" = "У Вас недостаточно баллов для публикации";
+"replies" = "Ответ(ов)";
+"reply" = "Ответить";
+"add_comment" = "Напишите комментарий";
 
 //Common
 "title" = "Титул";
