--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -162,6 +162,8 @@
 "points" = " голоса";
 "support_poll" = "Поддержать опрос";
 "next" = "Следующий";
+"comment_posted" = "Комментарий был опубликован";
+"comment_deleted" = "Комментарий был удален";
 
 //Voters VC
 "voters_load_error" = "Возникла ошибка при загрузке пользователей";
