--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -82,6 +82,7 @@
 "sending" = "Sending";
 "choose_claim_reason" = "Complaint reason:";
 "age" = "Age";
+"image_uploaded" = "Image uploaded successfully";
 
 //Welcome VC
 "welcomeLabel" = "Welcome to ThinkWhat!";
