CurrentUserProfile interests cell

--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -294,6 +294,8 @@
 "points" = "Баллов";
 "top_up" = "Пополнить";
 "interests" = "Интересы";
+"social_media_help" = "Прикрепите профиль в социальной сети, чтобы другие пользователи могли общаться с вами (опционально)";
+"interests_help" = "Топ Ваших интересов по темам публикациям, в которых вы голосуете";
 
 //Tutorials
 "poll_vote_edu_1" = "Опрос завершится и исчезнет из списков после того, как наберется необходимое количество участников.";
