--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -298,6 +298,8 @@
 "interests_help" = "Топ Ваших интересов по наиболее часто посещаемым темам";
 "stats" = "Статистика";
 "my_publications" = "Мои публикации";
+"my_subscribers" = "Мои подписчики";
+"balance" = "Баланс";
 
 //Tutorials
 "poll_vote_edu_1" = "Опрос завершится и исчезнет из списков после того, как наберется необходимое количество участников.";
