--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -306,6 +306,7 @@
 "interests" = "Интересы";
 "social_media_help" = "Прикрепите профиль в социальной сети, чтобы другие пользователи могли связаться с Вами (опционально)";
 "interests_help" = "Топ Ваших интересов по наиболее часто посещаемым темам";
+"balance_help" = "За каждое участие в публикации начисляются баллы. За размещение публикации баллы списываются";
 "stats" = "Статистика";
 "my_publications" = "Мои публикации";
 "my_subscribers" = "Мои подписчики";
@@ -313,6 +314,10 @@
 "account_management" = "Управление аккаунтом";
 "logout" = "Выйти";
 "delete_account" = "Удалить аккаунт";
+"allow_push_notifications" = "Разрешить уведомления";
+"subscriptions_notifications" = "Подписки";
+"watchlist_notifications" = "Отслеживаемые";
+"notifications" = "Уведомления";
 
 //Tutorials
 "poll_vote_edu_1" = "Опрос завершится и исчезнет из списков после того, как наберется необходимое количество участников.";
