--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -315,9 +315,14 @@
 "logout" = "Выйти";
 "delete_account" = "Удалить аккаунт";
 "allow_push_notifications" = "Разрешить уведомления";
-"subscriptions_notifications" = "Подписки";
-"watchlist_notifications" = "Отслеживаемые";
+"NOTIFICATIONS_OWN_COMPLETED" = "Мои завершенные публикации";
+"NOTIFICATIONS_NEW_SUBSCRIPTIONS" = "Новые публикации по подписке";
+"NOTIFICATIONS_WATCHLIST_COMPLETED" = "Завершенные в отслеживаемых";
 "notifications" = "Уведомления";
+"languages" = "Языки";
+"default_locale" = "Интерфейс";
+"locales" = "Контент";
+"content_language" = "Язык контента";
 
 //Tutorials
 "poll_vote_edu_1" = "Опрос завершится и исчезнет из списков после того, как наберется необходимое количество участников.";
