--- a/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/ru.lproj/Localizable.strings
@@ -93,6 +93,7 @@
 "appearance" = "Вид";
 "half" = "Половина";
 "third" = "Треть";
+"back" = "Назад";
 
 //Welcome VC
 "welcomeLabel" = "Добро пожаловать в ThinkWhat!";
@@ -323,6 +324,14 @@
 "default_locale" = "Интерфейс";
 "locales" = "Контент";
 "content_language" = "Язык контента";
+"content_language_hint" = "Контент будет предоставляться на выбранных языках";
+"about_app" = "О программе";
+"terms_privacy_policy" = "Условия использования";
+"licenses" = "Лицензии";
+"app_version" = "Версия";
+"feedback" = "Обратная связь";
+"feedback_hint" = "Отправьте пожелания или жалобы модераторам сервиса";
+"feedback_sent" = "Обращение отправлено";
 
 //Tutorials
 "poll_vote_edu_1" = "Опрос завершится и исчезнет из списков после того, как наберется необходимое количество участников.";
