--- a/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkWhat/Supporting Files/en.lproj/Localizable.strings
@@ -158,6 +158,7 @@
 "per_week" = "week";
 "per_month" = "month";
 "all_time" = "all time";
+"cancel_subscription" = "Cancel subscription";
 
 //List VC
 "list" = "Feed";
